# xclipdb

./: .gitignore  CMakeLists.txt  README.md  build.sh  handler.h  license.md  main.c
app-defaults/: Xclipdb
github/indicators-examples-snaps/gtk3-appindicator/: simple-client
src/: main.c
src/archive/: 1.c  2.c  CMakeLists.txt  almost-working.c  drawing.c  eventing.c  font-graphing.c  main.c  native  scratch.c  sql.c  sql.h  sqlite.c  test  test.c  tests.c  titling-window.c  use-xcb-atoms-properly.c  xinfo.c
src/global-hotkey/: CMakeLists.txt  main.c
src/simple-indicator/: CMakeLists.txt  main.c
src/xtclipboard/: CMakeLists.txt  after-one-reading.c  doesnt-work-overly-complicated.c  license.md  main.c  nice-try-1.c  xlib-clipboard-reader.c
