cmake_minimum_required(VERSION 3.15)
project(xtclipboard C)

find_package(X11)

add_executable(xtclipboard main.c)
target_link_libraries(xtclipboard PRIVATE
        Xaw7
        Xmu
        Xt
        X11
        )

message(X11_dpms_FOUND                = ${X11_dpms_FOUND})
message(X11_dpms_INCLUDE_PATH         = ${X11_dpms_INCLUDE_PATH})
message(X11_FOUND                     = ${X11_FOUND})
message(X11::ICE                      = )
message(X11_ICE_FOUND                 = ${X11_ICE_FOUND})
message(X11_ICE_INCLUDE_PATH          = ${X11_ICE_INCLUDE_PATH})
message(X11_ICE_LIB                   = ${X11_ICE_LIB})
message(X11_INCLUDE_DIR               = ${X11_INCLUDE_DIR})
message(X11_LIBRARIES                 = ${X11_LIBRARIES})
message(X11::SM                       = )
message(X11_SM_FOUND                  = ${X11_SM_FOUND})
message(X11_SM_INCLUDE_PATH           = ${X11_SM_INCLUDE_PATH})
message(X11_SM_LIB                    = ${X11_SM_LIB})
message(X11::X11                      = )
message(X11_X11_INCLUDE_PATH          = ${X11_X11_INCLUDE_PATH})
message(X11_X11_LIB                   = ${X11_X11_LIB})
message(X11_Xaccess_FOUND             = ${X11_Xaccess_FOUND})
message(X11_Xaccessrules_INCLUDE_PATH = ${X11_Xaccessrules_INCLUDE_PATH})
message(X11_Xaccessstr_INCLUDE_PATH   = ${X11_Xaccessstr_INCLUDE_PATH})
message(X11::Xau                      = )
message(X11_Xau_FOUND                 = ${X11_Xau_FOUND})
message(X11_Xau_INCLUDE_PATH          = ${X11_Xau_INCLUDE_PATH})
message(X11_Xau_LIB                   = ${X11_Xau_LIB})
message(X11::Xcomposite               = )
message(X11_Xcomposite_FOUND          = ${X11_Xcomposite_FOUND})
message(X11_Xcomposite_INCLUDE_PATH   = ${X11_Xcomposite_INCLUDE_PATH})
message(X11_Xcomposite_LIB            = ${X11_Xcomposite_LIB})
message(X11::Xcursor                  = )
message(X11_Xcursor_FOUND             = ${X11_Xcursor_FOUND})
message(X11_Xcursor_INCLUDE_PATH      = ${X11_Xcursor_INCLUDE_PATH})
message(X11_Xcursor_LIB               = ${X11_Xcursor_LIB})
message(X11::Xdamage                  = )
message(X11_Xdamage_FOUND             = ${X11_Xdamage_FOUND})
message(X11_Xdamage_INCLUDE_PATH      = ${X11_Xdamage_INCLUDE_PATH})
message(X11_Xdamage_LIB               = ${X11_Xdamage_LIB})
message(X11::Xdmcp                    = )
message(X11_Xdmcp_FOUND               = ${X11_Xdmcp_FOUND})
message(X11_Xdmcp_INCLUDE_PATH        = ${X11_Xdmcp_INCLUDE_PATH})
message(X11_Xdmcp_LIB                 = ${X11_Xdmcp_LIB})
message(X11::Xext                     = )
message(X11_Xext_FOUND                = ${X11_Xext_FOUND})
message(X11_Xext_INCLUDE_PATH         = ${X11_Xext_INCLUDE_PATH})
message(X11_Xext_LIB                  = ${X11_Xext_LIB})
message(X11::Xfixes                   = )
message(X11_Xfixes_FOUND              = ${X11_Xfixes_FOUND})
message(X11_Xfixes_INCLUDE_PATH       = ${X11_Xfixes_INCLUDE_PATH})
message(X11_Xfixes_LIB                = ${X11_Xfixes_LIB})
message(X11::Xft                      = )
message(X11_Xft_FOUND                 = ${X11_Xft_FOUND})
message(X11_Xft_INCLUDE_PATH          = ${X11_Xft_INCLUDE_PATH})
message(X11_Xft_LIB                   = ${X11_Xft_LIB})
message(X11::Xi                       = )
message(X11_Xi_FOUND                  = ${X11_Xi_FOUND})
message(X11_Xi_INCLUDE_PATH           = ${X11_Xi_INCLUDE_PATH})
message(X11_Xi_LIB                    = ${X11_Xi_LIB})
message(X11::Xinerama                 = )
message(X11_Xinerama_FOUND            = ${X11_Xinerama_FOUND})
message(X11_Xinerama_INCLUDE_PATH     = ${X11_Xinerama_INCLUDE_PATH})
message(X11_Xinerama_LIB              = ${X11_Xinerama_LIB})
message(X11::Xkb                      = )
message(X11::xkbfile                  = )
message(X11_xkbfile_FOUND             = ${X11_xkbfile_FOUND})
message(X11_xkbfile_INCLUDE_PATH      = ${X11_xkbfile_INCLUDE_PATH})
message(X11_xkbfile_LIB               = ${X11_xkbfile_LIB})
message(X11_Xkb_FOUND                 = ${X11_Xkb_FOUND})
message(X11_Xkb_INCLUDE_PATH          = ${X11_Xkb_INCLUDE_PATH})
message(X11_Xkblib_INCLUDE_PATH       = ${X11_Xkblib_INCLUDE_PATH})
message(X11::Xmu                      = )
message(X11_Xmu_FOUND                 = ${X11_Xmu_FOUND})
message(X11_Xmu_INCLUDE_PATH          = ${X11_Xmu_INCLUDE_PATH})
message(X11_Xmu_LIB                   = ${X11_Xmu_LIB})
message(X11::Xpm                      = )
message(X11_Xpm_FOUND                 = ${X11_Xpm_FOUND})
message(X11_Xpm_INCLUDE_PATH          = ${X11_Xpm_INCLUDE_PATH})
message(X11_Xpm_LIB                   = ${X11_Xpm_LIB})
message(X11::Xrandr                   = )
message(X11_Xrandr_FOUND              = ${X11_Xrandr_FOUND})
message(X11_Xrandr_INCLUDE_PATH       = ${X11_Xrandr_INCLUDE_PATH})
message(X11_Xrandr_LIB                = ${X11_Xrandr_LIB})
message(X11::Xrender                  = )
message(X11_Xrender_FOUND             = ${X11_Xrender_FOUND})
message(X11_Xrender_INCLUDE_PATH      = ${X11_Xrender_INCLUDE_PATH})
message(X11_Xrender_LIB               = ${X11_Xrender_LIB})
message(X11::XRes                     = )
message(X11_XRes_FOUND                = ${X11_XRes_FOUND})
message(X11_XRes_INCLUDE_PATH         = ${X11_XRes_INCLUDE_PATH})
message(X11_XRes_LIB                  = ${X11_XRes_LIB})
message(X11_Xshape_FOUND              = ${X11_Xshape_FOUND})
message(X11_Xshape_INCLUDE_PATH       = ${X11_Xshape_INCLUDE_PATH})
message(X11_XShm_FOUND                = ${X11_XShm_FOUND})
message(X11_XShm_INCLUDE_PATH         = ${X11_XShm_INCLUDE_PATH})
message(X11::Xss                      = )
message(X11_Xss_FOUND                 = ${X11_Xss_FOUND})
message(X11_Xss_INCLUDE_PATH          = ${X11_Xss_INCLUDE_PATH})
message(X11_Xss_LIB                   = ${X11_Xss_LIB})
message(X11_XSync_FOUND               = ${X11_XSync_FOUND})
message(X11_XSync_INCLUDE_PATH        = ${X11_XSync_INCLUDE_PATH})
message(X11::Xt                       = )
message(X11_Xt_FOUND                  = ${X11_Xt_FOUND})
message(X11_Xt_INCLUDE_PATH           = ${X11_Xt_INCLUDE_PATH})
message(X11_Xt_LIB                    = ${X11_Xt_LIB})
message(X11::Xtst                     = )
message(X11_Xtst_FOUND                = ${X11_Xtst_FOUND})
message(X11_Xtst_INCLUDE_PATH         = ${X11_Xtst_INCLUDE_PATH})
message(X11_Xtst_LIB                  = ${X11_Xtst_LIB})
message(X11::Xutil                    = )
message(X11_Xutil_FOUND               = ${X11_Xutil_FOUND})
message(X11_Xutil_INCLUDE_PATH        = ${X11_Xutil_INCLUDE_PATH})
message(X11::Xv                       = )
message(X11_Xv_FOUND                  = ${X11_Xv_FOUND})
message(X11_Xv_INCLUDE_PATH           = ${X11_Xv_INCLUDE_PATH})
message(X11_Xv_LIB                    = ${X11_Xv_LIB})
message(X11::Xxf86misc                = )
message(X11_Xxf86misc_FOUND           = ${X11_Xxf86misc_FOUND})
message(X11_Xxf86misc_INCLUDE_PATH    = ${X11_Xxf86misc_INCLUDE_PATH})
message(X11_Xxf86misc_LIB             = ${X11_Xxf86misc_LIB})
message(X11::Xxf86vm                  = )
message(X11_Xxf86vm_INCLUDE_PATH      = ${X11_Xxf86vm_INCLUDE_PATH})
message(X11_Xxf86vm_LIB               = ${X11_Xxf86vm_LIB})
message(X11_Xxf86vm_FOUND             = ${X11_Xxf86vm_FOUND})

